@@ -1,4 +1,6 @@
 
+- added tetgen .smesh output format
+
 Tue, Aug 23, 2016 : Released Refine 1.8.17
 
 - added ref_usm3d2fun3d_mapbc ref_fun3d2usm3d_mapbc mapbc translation scripts
